# HFTS_Server_cmake_v01

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp
include/: DbWriter.h  MqttClient.h  models.h  tpMeasParser.h
src/: DbWriter.cpp  MqttClient.cpp  main.cpp  tpMeasParser.cpp
